--- a/src/tests/lighttpd.conf
+++ b/src/tests/lighttpd.conf
@@ -12,5 +12,5 @@
 # - saves some time
 # - saves memory
 server.modules              = ( "mod_blank" )
-
+server.port = 8080
 server.document-root = "./"
